# ghx

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/actions/deploy-on-vercel/: action.yml
.github/workflows/: build-gleam.yml  build-rust.yml  deploy-public-version.yml  lint-gleam.yml  lint-rust.yml  main.yml  pr.yml  preview-public-version.yml  preview.yml  release-public-version.yml  release.yml
src/: args.rs  auth.rs  errors.rs  handle.rs  main.rs  types.rs
src/server/: handlers.rs  mod.rs  state.rs  utils.rs
src/server/client/: .gitignore  README.md  gleam.toml  index.html  manifest.toml
src/server/client/priv/static/: custom.css  ghch.css  ghch.mjs  ghx.css  ghx.mjs
src/server/client/src/: constants.gleam  effects.gleam  ghch.gleam  ghx.gleam  types.gleam  update.gleam  utils.gleam  view.gleam
src/server/client/src/ghx/: effects.gleam  types.gleam  update.gleam  utils.gleam  view.gleam
src/server/client/src/ghx/ffi/: element_ffi.mjs
