[package]
name = "ghx"
version = "0.1.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/ghx"
description = "ghx simplifies viewing changelogs for GitHub repositories"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "src/server/client",
]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.42", features = ["derive"] }
hyper = "1.7.0"
open = "5.3.2"
reqwest = { version = "0.12.22", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
which = "8.0.0"
