[package]
name = "ghx"
version = "0.1.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/ghx"
description = "ghx simplifies viewing changelogs for GitHub repositories"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "src/server/client",
]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
hyper = "1.8.1"
open = "5.3.3"
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
which = "8.0.0"
