[package]
name = "ghx"
version = "0.1.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/ghx"
description = "ghx simplifies viewing changelogs for GitHub repositories"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "src/server/client",
]

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
hyper = "1.9.0"
open = "5.3.4"
reqwest = { version = "0.12.28", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
which = "8.0.2"
